--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
  				<div class="banner3">
  					<img src="market.jpg">
  					<h4>Talk To Us</h4>
- 					<p>Ready learn more? Feel free to provide us with your information to hear from us.</p>
+ 					<p>Ready to learn more? Feel free to provide us with your information to hear from us.</p>
  					<!-- <p>Learn More &#8594</p> -->
  					<a href="index.html" target="_blank">Learn More &#8594</a>
 
