--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
  				</div>
 		</nav>
 		<div class="caption">
-			<h1>Cyprus Wealth Management</h1>
+			<h1>Cypress Wealth Management</h1>
 		</div>
 		<div class="box">
 			<a href="#intro">
