--- a/pages/whatwedo.html
+++ b/pages/whatwedo.html
@@ -1,1 +1,110 @@
-what we do
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+
+  <title>Cypress Asset Management</title>
+  <meta content="" name="description">
+  <meta content="" name="keywords">
+
+  <!-- Favicons -->
+  <link href="../assets/img/sample1.png" rel="icon">
+  <link href="../assets/img/sample1.png" rel="apple-touch-icon">
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,600,600i,700,700i" rel="stylesheet">
+
+  <!-- Vendor CSS Files -->
+  <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+
+  <!-- Template Main CSS File -->
+  <link href="../assets/css/wwd.css" rel="stylesheet">
+
+
+</head>
+
+<body>
+
+  <!-- ======= Header ======= -->
+  <header id="header">
+    <div class="container-fluid">
+      <div class="logo">
+        <h1><a href="../index.html"><img src="../assets/img/sample1.png"></a></h1>
+        <!-- Uncomment below if you prefer to use an image logo -->
+<!--          <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
+      </div>
+      <button type="button" class="nav-toggle"><i class="bx bx-menu"></i></button>
+      <nav class="nav-menu">
+        <ul>
+          <li class="active"><a href="../index.html" class="scrollto">Home</a></li>
+          <li><a href="../index.html" class="scrollto">Why Us</a></li>
+          <li class="drop-down"><a href="../pages/whatwedo.html">About</a>
+            <ul>
+              <li><a href="../pages/whatwedo.html">What We Do</a></li>
+              <li><a href="../pages/people.html">People</a></li>
+            </ul>
+          </li>
+          <li><a href="../pages/learnmore.html">Learn More</a></li>
+        </ul>
+      </nav><!-- .nav-menu -->
+
+    </div>
+  </header><!-- End #header -->
+
+  <!-- ======= Hero Section ======= -->
+  <section id="hero">
+    <div class="hero-container">
+      <h1>What We Do</h1>
+      <!-- <h2>Own Your Future</h2> -->
+    </div>
+  </section><!-- #hero -->
+
+  <main id="main">
+
+
+  	<div id="textBody">
+  		<h4>Founded in 2018</h4>
+  		<h5>About Us</h5>
+  		<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
+		</p>
+  		<h5>Our Goals</h5>
+  		<p>In order to keep up with the rapid changes, you must constantly innovate and adapt. This is precisely what we look to do at Cypress Asset Management. By incorporating and experimenting with new technology, we will stay on the forefront of innovation and portfolio management. 
+		</p>
+  	</div>
+  
+  </main><!-- End #main -->
+
+  <!-- ======= Footer ======= -->
+  <div class="otherFooter">
+    <p>This website is solely for informational purposes. Past performance is no guarantee of future returns. Investing involves risk and possible loss of principal capital. No advice may be rendered by Cyprus Asset Management unless a client service agreement is in place.</p>
+  </div>
+
+  <footer id="footer">
+    <div class="container">
+      <div class="email">
+          <a href="mailto:shumael.syed@gmail.com">contact@cypressam.com</a>
+        </div>
+      <div class="copyright">
+
+        &copy; Copyright <strong><span>Cypress Asset Management</span></strong>. All Rights Reserved
+      </div>
+      <div class="credits">
+
+        Designed by <a href="https://shumael.github.io/">Shumael Syed</a>
+      </div>
+    </div>
+  </footer><!-- End #footer -->
+
+  <!-- Vendor JS Files -->
+  <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="../assets/vendor/php-email-form/validate.js"></script>
+
+  <!-- Template Main JS File -->
+  <script src="../assets/js/main.js"></script>
+
+</body>
+
+</html>
