what we do page styled

--- a/pages/whatwedo.html
+++ b/pages/whatwedo.html
@@ -40,7 +40,7 @@
       <nav class="nav-menu">
         <ul>
           <li class="active"><a href="../index.html" class="scrollto">Home</a></li>
-          <li><a href="../index.html" class="scrollto">Why Us</a></li>
+          <!-- <li><a href="../index.html" class="scrollto">Why Us</a></li> -->
           <li class="drop-down"><a href="../pages/whatwedo.html">About</a>
             <ul>
               <li><a href="../pages/whatwedo.html">What We Do</a></li>
@@ -68,7 +68,7 @@
   	<div id="textBody">
   		<h4>Founded in 2018</h4>
   		<h5>About Us</h5>
-  		<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
+  		<p>Founded in 2018 by Shumael Syed, Cypress Asset Management seeks to intelligently manage investments. We look to do this by employing tools such as big data and historical pricing patterns. At Cypress Asset Management, we use a variety of strategies to put ourselves in the best possible position for success. What sets us apart is our unique approach to investing and emphasis on knowledge.
 		</p>
   		<h5>Our Goals</h5>
   		<p>In order to keep up with the rapid changes, you must constantly innovate and adapt. This is precisely what we look to do at Cypress Asset Management. By incorporating and experimenting with new technology, we will stay on the forefront of innovation and portfolio management. 
