people page added

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
   <!-- ======= Footer ======= -->
   <div class="otherFooter">
-    <p>This website is solely for informational purposes. Past performance is no guarantee of future returns. Investing involves risk and possible loss of principal capital. No advice may be rendered by Cyprus Asset Management unless a client service agreement is in place.</p>
+    <p>This website is solely for informational purposes. Past performance is no guarantee of future returns. Investing involves risk and possible loss of principal capital. No advice may be rendered by Cypress Asset Management unless a client service agreement is in place.</p>
   </div>
 
   <footer id="footer">
