--- a/pages/thanks.html
+++ b/pages/thanks.html
@@ -75,16 +75,15 @@
                 </div>
 
                 <div class="col-sm-12">
-                   <form action="https://formsubmit.co/shumael.syed@gmail.com" method="POST">
+                   <!-- <form action="https://formsubmit.co/shumael.syed@gmail.com" method="POST">
                       <input type="text" placeholder="Email Address" name="email" required>
                       <input type="text" placeholder="Full Name" name="name" required>
                       <input type="text" placeholder="Write Your Message Here" name="message" required>
-                      <input type="hiddne" name="_next" value="https://shumael.github.io/cypressam/pages/thanks.html">
-                      <input type="hidden" name="_captcha" value="false">
            
                       <button type="submit"> Submit </button>
                      
-                   </form>
+                   </form> -->
+                   <p>Thank You!</p>
                 </div>
 
                <!--  <div class="col-sm-12">
