--- a/pages/learnmore.html
+++ b/pages/learnmore.html
@@ -79,7 +79,7 @@
                       <input type="text" placeholder="Email Address" name="email" required>
                       <input type="text" placeholder="Full Name" name="name" required>
                       <input type="text" placeholder="Write Your Message Here" name="message" required>
-                      <input type="hiddne" name="_next" value="https://shumael.github.io/cypressam/pages/thanks.html">
+                      <input type="hidden" name="_next" value="https://shumael.github.io/cypressam/pages/thanks.html">
                       <input type="hidden" name="_captcha" value="false">
            
                       <button type="submit"> Submit </button>
