--- a/pages/learnmore.html
+++ b/pages/learnmore.html
@@ -78,7 +78,7 @@
                    <form action="https://formsubmit.co/shumael.syed@gmail.com" method="POST">
                       <input type="text" placeholder="Email Address" name="email" required>
                       <input type="text" placeholder="Full Name" name="name" required>
-                      <input type="text" placeholder="Write Your Message Here" name="message" required>
+                      <input type="text" placeholder="Write Your Message" name="message" required>
                       <input type="hidden" name="_next" value="https://shumael.github.io/cypressam/pages/thanks.html">
                       <input type="hidden" name="_captcha" value="false">
            
