--- a/pages/learnmore.html
+++ b/pages/learnmore.html
@@ -86,9 +86,9 @@
                       <input type="text" placeholder="Email Address" name="email" required><br>
                       
                       <label for="message"> Questions or Comments</label><br>
-                      <!-- <input type="text" placeholder="Write Your Message" name="message" required> -->
-                      <textarea type="text" placeholder="Write Your Messag" name="message" rows="4" cols="50" required>
-                      </textarea><br>
+                      <input type="text" placeholder="Write Your Message" name="message" required><br>
+<!--                       <textarea type="text" placeholder="Write Your Messag" name="message" rows="4" cols="50" required>
+                      </textarea><br> -->
 
                       <input type="hidden" name="_next" value="https://shumael.github.io/cypressam/pages/thanks.html">
 
