--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
   <main id="main">
 
     <!-- ======= About Section ======= -->
-    <section id="about" class="about">
-      <div id ="intro" class="offset">
+  <section id="about" class="about">
+  <div id ="intro" class="offset">
     <div class = "container">
       <div class="row">
         <div class="col-sm-12">
@@ -91,7 +91,7 @@
         <div class="row">
           <div id="firstImage"class="col-lg-6 col-sm-12">
             <div class="banner2">
-              <img src="assets/img/bull.jpg">
+              <img src="assets/img/bullCorrectSize.jpg">
               <h4>About</h4>
               <p>Find out more about our management, methods, and unique systematic approach.</p>
               <a href="index.html">What We Do &#8594</a>
