--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
               <img src="assets/img/bullCorrectSize.jpg">
               <h4>About</h4>
               <p>Find out more about our management, methods, and unique systematic approach.</p>
-              <a href="index.html">What We Do &#8594</a>
+              <a href="pages/whatwedo.html">What We Do &#8594</a>
             </div>
           </div>
 
@@ -103,7 +103,7 @@
           <img src="assets/img/market.jpg">
           <h4>Talk To Us</h4>
           <p>Ready to learn more? Feel free to provide us with your information to hear from us.</p>
-          <a href="index.html" target="_blank">Learn More &#8594</a>
+          <a href="pages/learnmore.html" target="_blank">Learn More &#8594</a>
 
         </div>
       </div>
