--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
       </nav><!-- .nav-menu -->
 
     </div>
+
+
   </header><!-- End #header -->
+
 
   <!-- ======= Hero Section ======= -->
   <section id="hero">
@@ -62,6 +65,13 @@
       <h1>Cypress Asset Management</h1>
       <h2>Own Your Future</h2>
     </div>
+<!--     <div class="box">
+      <a href="#about">
+        <span></span>
+        <span></span>
+        <span></span>
+      </a>
+    </div> -->
   </section><!-- #hero -->
 
   <main id="main">
