--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </section><!-- End About Section -->
 
     <div id="images" class="offset">
-      <div class="container banner1">
+      <div class="container">
         <div class="row">
           <div id="firstImage"class="col-lg-6 col-sm-12">
             <div class="banner2">
