learn more readyo for mobil

--- a/pages/learnmore.html
+++ b/pages/learnmore.html
@@ -77,17 +77,17 @@
                 <div class="col-sm-12">
                    <form action="https://formsubmit.co/shumael.syed@gmail.com" method="POST">
                       <label id="labelName" for="fname"> Name*</label><br>
-                      <input id="inputFname" type="text" placeholder="First Name" name="fname" size="40" required>
+                      <input id="inputFname" type="text" placeholder="First Name" name="fname" required>
                       <!-- <label for="lname"> Last Name</label><br> -->
-                      <input id="inputLname" type="text" placeholder="Last Name" name="lname" size="40"required><br>
+                      <input id="inputLname" type="text" placeholder="Last Name" name="lname" required><br>
 
 
                       <label id="labelEmail" for="email"> Email*</label><br>
-                      <input id="inputEmail" type="text" placeholder="Email Address" name="email" size="85" required><br>
+                      <input id="inputEmail" type="text" placeholder="Email Address" name="email" required><br>
                       
                       <label id="labelMessage" for="message"> Questions or Comments*</label><br>
                      <!--  <input style="line-height: 6em" id="inputMessage" type="text" placeholder="Write Your Message" name="message" size="85"required><br> -->
-                      <textarea type="text" placeholder="Message" name="message" rows="4" cols="83" required></textarea><br>
+                      <textarea id="comments" type="text" placeholder="Message" name="message" required></textarea><br>
 
                       <input type="hidden" name="_next" value="https://shumael.github.io/cypressam/pages/thanks.html">
 
